[package]
name = "pyza"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pyza"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.2.5", features = ["derive"] }
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
dialoguer = "0.10.1"
scraper = "0.13.0"
serde = { version = "1.0.137", features = ["derive"] }
